testcases/negative/unsupported_version_1_0.vcf
BEGIN:VCARD
VERSION:1.0
FN:John Doe
END:VCARD
